# Raphiis-Clipboard-Automations

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
src/: main.rs
