[package]
name = "raphiis-clipboard-automations"
version = "0.1.1"
edition = "2021"
authors = ["Raphiiko"]
license = "MIT"
repository = "https://github.com/Raphiiko/raphiis-clipboard-automations"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-win = "5.3.1"
clipboard-master = "=3.1.3"
regex = "1.10.5"
